--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.0.2",
     "@astrojs/rss": "^2.1.0",
-    "astro": "^2.0.2"
+    "astro": "^2.0.2",
+    "preact": "^10.11.3"
   }
 }
